# Rewind

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  worker.py
backend/app/: main.py
backend/app/api/v1/: chat.py  compare.py  datasets.py  runs.py  strategies.py
backend/app/core/: config.py  database.py  redis.py
backend/app/models/: __init__.py  base.py  chat_session.py  dataset.py  message.py  run.py  strategy.py  trade.py
backend/app/schemas/: chat.py  dataset.py  run.py  strategy.py
backend/app/services/: chat_context_service.py  chat_service.py  compare_service.py  dataset_service.py  run_service.py  strategy_service.py  strategy_validation_service.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 001_initial.py  002_dataset_backed_runs.py
backend/tests/: test_chat_api.py  test_chat_context_service.py  test_compare_api.py  test_compare_service.py  test_dataset_api.py  test_run_dataset_service.py  test_strategy_safety_api.py  test_worker_safety.py
data/sample/: AAPL_1d.parquet  GOOG_1d.parquet  MSFT_1d.parquet  SPY_1d.parquet  TSLA_1d.parquet
docs/: local-onboarding.md  strategy-authoring.md
engine/: __init__.py  data_loader.py  executor.py  metrics.py  portfolio.py  signal.py  strategy.py  strategy_runner.py  strategy_validator.py
engine/tests/: test_data_loader.py  test_executor.py  test_metrics.py  test_portfolio.py  (+2 more)
frontend/: Dockerfile  next.config.ts  pnpm-lock.yaml
llm/: client.py  context.py  parser.py  tools.py
scripts/: dev.sh  init_db.py  seed_data.py
(+22 files in other folders)
